# prac-cpp

./: CMakeLists.txt
smart_pointer/: CMakeLists.txt  unique_pointer.cpp  unique_pointer.hpp
smart_pointer/shared_pointer/: shared_pointer.cpp
smart_pointer/unique_pointer/: unique_pointer.cpp
smart_pointer/weak_pointer/: weak_pointer  weak_pointer.cpp  weak_pointer.hpp
